
4.x
-----

- scrooge-generator: Add parsing, AST, and Scala code generation
  support for annotations on enums, enum fields, services, and
  service methods. ``RB_ID=908556``
- scrooge-generator: Fix default values for collections in scala bindings ``RB_ID=908152``
- scrooge-generator: MethodIfaceBuilder#newMethodIface now returns
  a MethodIface. ``RB_ID=907700``

4.14.0
------

No Changes

4.13.0
------

- scrooge-linter: Add thrift definition linter warnings if generated
  thrift will exceed JVM HotSpot ClipInlining check.
  ``RB_ID=896379``

4.12.0
------

- scrooge-generator: Remove check for 22 args when generating scala
  ServiceIface. Now that we no longer support Scala 2.10 we can always
  generate a case class for the generated scala ServiceIface.
  ``RB_ID=882203``
- scrooge-generator: Don't allow Structs and Typedefs with the same
  identifier. Structs and typedefs should not have the same name. This
  makes it difficult to properly support self-referencing types.
  ``RB_ID=881684``
- scrooge-generator: Fix pathological case for self-referencing
  types with Java generation. ``RB_ID=880813``

4.11.0
------

- scrooge-generator: Add support for self-referencing types from
  `pinsri` via https://github.com/twitter/scrooge/pull/244
  ``RB_ID=873802``

- scrooge: Remove unmaintained bin/ directory. ``RB_ID=873411``

4.10.0
------

No Changes

4.9.0
------

No Changes

- scrooge-core: `c.t.scrooge.TReusableMemoryTransport` now uses TUnboundedByteArrayOutputStream
  instead of TByteArrayOutputStream to avoid buffer reallocation on reset.

4.8.0
------

Breaking API Changes
~~~~~~~~~~~~~~~~~~~~

- scrooge-sbt-plugin: Allow scrooge to build bindings for more than one
  language. To reflect this, `ScroogeSBT.autoImport.scroogeLanguage` has been
  renamed to `scroogeLanguages` and is now a `SettingKey[Seq[String]]`
  instead of a `SettingKey[String].` ``RB_ID=846198``

- Builds are now only for Java 8 and Scala 2.11. See the